# case-pilar

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.pipeline.yaml
src/: main.py  router.py
src/controller/: models.py  sort_words_controller.py  vowels_counter_controller.py
src/service/: sort_words_service.py  vowels_counter_service.py
tests/contoller/: test_sort_words_controller.py  test_vowels_counter_controller.py
tests/service/: test_sort_words_service.py  test_vowels_counter_service.py
